# ePIC-Benchmark-lib

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  setup.py
dev/: DetectorConfig.ipynb  dev_performance_utils.ipynb  eff_out.txt  example.yml  performance_study.ipynb  resol_out_slices.txt
dev/.ipynb_checkpoints/: DetectorConfigTools-checkpoint.ipynb
docs/: api_ref.rst  conf.py  examples.rst  guide.rst  index.rst  installation.rst  requirements.in  requirements.txt  workflow_hierarchy.rst
docs/_static/: custom.css
docs/example_configs/: benchmark_config_ex.py  detector_config_ex.py  parsl_config_ex.py  simulation_config_ex.py  workflow_config_ex.py
docs/examples/: index.rst
docs/examples-temp/: index.rst
docs/guide/: index.rst  intro.rst
docs/guide-temp/: index.rst
docs/guide_temp/: index.rst
docs/installation-temp/: installation.rst
docs/reference/: index.rst
docs/reference-temp/: index.rst
docs/reference_temp/: index.rst
ePIC_benchmarks/: __init__.py  __main__.py
ePIC_benchmarks/_bash/: flags.py
ePIC_benchmarks/_file/: editors.py  utils.py
ePIC_benchmarks/analysis/: performance.py
ePIC_benchmarks/benchmark/: config.py
ePIC_benchmarks/container/: containers.py
ePIC_benchmarks/detector/: __init__.py  config.py
ePIC_benchmarks/parsl/: __init__.py  _base.py  _wrapped_launchers.py
ePIC_benchmarks/simulation/: _quantity.py  _utils.py  _validators.py  config.py  settings.py
ePIC_benchmarks/utils/: equality.py  time.py  typing.py
ePIC_benchmarks/workflow/: __init__.py  _run.py  config.py
eicbenchmarks/: __init__.py  _constants.py
eicbenchmarks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eicbenchmarks/Analysis/: AnalysisUtils.py
eicbenchmarks/ConfigUtils/: DetectorConfig.py
eicbenchmarks/ParslApp/: AnalysisApps.py  (+3 more)
epic_benchmarks/: __init__.py  _constants.py  mypy.ini
examples/: example_benchmark.py
scripts/: headless_workflow.sl  workflow_script.py
(+330 files in other folders)
