[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pyyaml",
    "pydantic",
    "pydantic-xml",
    "pydantic-settings",
    "mypy",
    "lxml",
    "jupyter",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "uproot",
    "uncertainties",
    "parsl",
    "lmfit",
    "matplotlib",
    "autodoc_pydantic"
]
name = "ePIC_benchmarks"
authors = [{name = "Amir Abdou", email = "AmirKS@lbl.gov"}]
dynamic = ["version"]