[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["ePIC_benchmarks"]

[project]
dependencies = [
    "pyyaml",
    "pydantic",
    "pydantic-xml",
    "pydantic-settings",
    "mypy",
    "lxml",
    "jupyter",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "uproot",
    "uncertainties",
    "parsl",
    "lmfit",
    "matplotlib",
    "autodoc_pydantic",
    "sphinx-gitref",
    "sphinx-copybutton",
    "sphinx-rtd-dark-mode",
    "pydata-sphinx-theme",
    "autodoc_pydantic[erdantic]",
    "graphviz",
    "sphinx-book-theme",
]

name = "ePIC_benchmarks"
authors = [{name = "Amir Abdou", email = "AmirKS@lbl.gov"}]
dynamic = ["version"]